kubernetes/.archive/aria2-ariang/app/filebrowser/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name filebrowser
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - port: 80
